--- a/reportCarteirinha.rdlc
+++ b/reportCarteirinha.rdlc
@@ -897,7 +897,8 @@
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>Socios</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\Lucas\OneDrive\Área de Trabalho\Agility\PROJETOS\Projetos\Projeto 5 - Sistema Sindicato\Programa STPMJ\Socios.xsd</rd:SchemaPath>
+        <rd:SchemaPath>C:\Users\Lucas\OneDrive\Área de Trabalho\
+        \PROJETOS\Projetos\Projeto 5 - Sistema Sindicato\Programa STPMJ\Socios.xsd</rd:SchemaPath>
         <rd:TableName>DataTable1</rd:TableName>
         <rd:TableAdapterFillMethod />
         <rd:TableAdapterGetDataMethod />
